--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,10 +1,10 @@
-<nav class="navbar navbar-light bg-dark " >
-    <a class="navbar-brand" href="#" style="color:rgb(85, 98, 237);"><b>&#169; HAFC Bank Pvt.Ltd </b></a>
+
+ <!-- As a link -->
+ <nav class="navbar navbar-light bg-dark " >
+    <a class="navbar-brand  " href="#" style="color:rgb(85, 98, 237);"><b>&#169; HAFC Bank Pvt.Ltd </b></a>
     <span class="quote text-light">Giving you freedom...</span>
-    <br>
-    
   </nav>
-  
+
   
   <div class="container col-md-12 mt-0">
       <div class="d-flex justify-content-center h-100">
@@ -14,33 +14,38 @@
                   
               </div>
               <div class="card-body">
-                 <form [formGroup]="registerForm" (ngSubmit)="register()">
+                  <form [formGroup]="registerForm" (ngSubmit)="register()">
                     <div class="input-group form-group">
                         <div class="input-group-prepend">
-                            <span class="input-group-text"><i class="fas fa-key"></i></span>
+                            <span class="input-group-text"><i class="fas fa-user"></i></span>
                         </div>
-                        <input type="text" class="form-control" name="uname" formControlName ="uname" placeholder="Username" id="login_uname" required>
+                        <input type="text" class="form-control" name="uname" formControlName="uname" placeholder="Username" id="login_user" >
+                        ;
                     </div>
+<div *ngIf="this.registerForm.get('uname')?.touched&&this.registerForm.get('uname')?.errors" style="color: red;">invalid username</div>
+
                       <div class="input-group form-group">
                           <div class="input-group-prepend">
                               <span class="input-group-text"><i class="fas fa-user"></i></span>
                           </div>
-                          <input type="text" class="form-control" name="acno" formControlName ="acno" placeholder="acno" id="login_accno" required>
+                          <input type="text" class="form-control" name="acno" formControlName="acno" placeholder="Account Number" id="login_accno" >
                           
                       </div>
+                      <div *ngIf="this.registerForm.get('acno')?.touched&&this.registerForm.get('acno')?.errors" style="color: red;">invalid username</div>
                       <div class="input-group form-group">
                           <div class="input-group-prepend">
                               <span class="input-group-text"><i class="fas fa-key"></i></span>
                           </div>
-                          <input type="password" class="form-control" name="pswd" formControlName="pswd" placeholder="password" id="login_password" required>
+                          <input type="password" class="form-control" name="pswd" formControlName ="pswd" placeholder="password" id="login_password" >
                       </div>
-                      
+                      <div *ngIf="this.registerForm.get('pswd')?.touched&&this.registerForm.get('pswd')?.errors" style="color: red;">invalid username</div>
                       <div class="form-group">
-                          <input type="submit" value="Login" class="btn float-right login_btn " style="width:50%" >
+                          <input type="submit" value="Register"  class="btn float-right login_btn " style="width:50%" >
                       </div>
                   </form>
               </div>
-              <p style="color:white;align-items:baseline;">Not a user? <a routerLink="">Log In</a></p>
+              <p style="color:white;align-items:baseline;">Already Existing user? <a routerLink="">Log In</a></p>
           </div>
       </div>
   </div>
+  
