--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+/* Made with love by Mutiullah Samim*/
+
 @import url('https://fonts.googleapis.com/css?family=Numans');
 
 html,body{
