--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -6,6 +6,9 @@
 
 <h1 style="color: white;">Welcome {{user}}</h1>
 
+<a routerLink="/transaction">View Transaction History</a>
+<button class="btn btn-warning "(click)="logout()" style="float: right; margin:10px">Log Out</button>
+<hr>
 
 <div class="container col-md-12 mt-0">
     <div class="d-flex justify-content-center h-100">
