--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -5,16 +5,24 @@
 </nav>
 
 <h1 style="color: white;">Welcome {{user}}</h1>
+<button class="btn btn-warning "(click)="logout()" style="float: right; margin:10px">Log Out</button>
+<br><br>
+<button class="btn btn-danger"(click)="deleteAccount()" style="float: right; margin:10px">delete</button>
+<br>
+<h3>{{lDate|date:'short'}}</h3>
 
 <a routerLink="/transaction">View Transaction History</a>
-<button class="btn btn-warning "(click)="logout()" style="float: right; margin:10px">Log Out</button>
+
+
+<app-delete-confirm  (onCancel)="cancel()" [item]="acno"></app-delete-confirm>
+<!--<app-animation-demo></app-animation-demo>-->
 <hr>
 
-<div class="container col-md-12 mt-0">
+<div [ngClass]="acno?'c1':''" class="container col-md-12 mt-0">
     <div class="d-flex justify-content-center h-100">
         <div class="card">
             <div class="card-header">
-                <h3 class="text-center">Deposit Form</h3>
+                <h3 appHighlight  class="text-center">Deposit Form</h3>
 
             </div>
             <div class="card-body">
@@ -61,11 +69,11 @@
 
 
 
-<div class="container col-md-12 mt-0">
+<div [ngClass]="acno?'c1':''" class="container col-md-12 mt-0">
     <div class="d-flex justify-content-center h-100">
         <div class="card">
             <div class="card-header">
-                <h3 class="text-center">Withdraw Form</h3>
+                <h3 appHighlight class="text-center">Withdraw Form</h3>
 
             </div>
             <div class="card-body">
